Update SecurityConfigurations.java